--- a/1day_rails/sample/test/fixtures/diaries.yml
+++ b/1day_rails/sample/test/fixtures/diaries.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  id: 1
-  title: 今日は終日休暇
-  body: 今日は仕事を休んで、公園で読書を楽しんだ。
+  title: MyString
+  body: MyText
 
 two:
-  id: 2
-  title: 今日の天気
-  body: 今日は雨が降った後、虹が出ていてきれいだった。
+  title: MyString
+  body: MyText
