--- a/1day_rails/health_observation/test/fixtures/healths.yml
+++ b/1day_rails/health_observation/test/fixtures/healths.yml
@@ -1,13 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  year: MyString
-  class: MyString
-  number: 1
+  year: 1
+  school_class: 1
+  class_number: 1
   name: MyString
 
 two:
-  year: MyString
-  class: MyString
-  number: 1
+  year: 1
+  school_class: 1
+  class_number: 1
   name: MyString
