--- a/1day_rails/health_observation/test/fixtures/healths.yml
+++ b/1day_rails/health_observation/test/fixtures/healths.yml
@@ -1,13 +1,19 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  year: 1
-  school_class: 1
-  class_number: 1
+  year: MyString
+  school_class: MyString
+  class_number: MyString
   name: MyString
+  commute: 1
+  temperature: MyString
+  etc: MyText
 
 two:
-  year: 1
-  school_class: 1
-  class_number: 1
+  year: MyString
+  school_class: MyString
+  class_number: MyString
   name: MyString
+  commute: 1
+  temperature: MyString
+  etc: MyText
